--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Medium Roast</string>
+    <string name="description">A demo app for testing purposes.</string>
+    <string name="button_call_to_action">Click Me</string>
 </resources>
+
